# monad-talk-example

./: Cargo.toml  README.md  person.txt
